--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -26,7 +26,7 @@ data1 <- read_csv("data/mismanaged-plastic-waste-per-capita.csv")
 
 # Member 6 (pair 3) write code to load File 3 data here:
 
-
+data3 <- read_tsv("data/UN_country_population.tsv")
 
 # Member 1 (pair 1) write code to load File 4 data here:
 
@@ -49,8 +49,9 @@ plastic_data_all <- data1
 
 # Member 6 (pair 3) write code to join your data to 'plastic_data_all':
 
-
-
+plastic_data_all <- data3 %>%
+  select(-name) %>%
+  right_join(plastic_data_all, by = "code")
 
 # Member 1 (pair 1) write code to join your data to 'plastic_data_all':
 
