--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -50,7 +50,10 @@ plastic_data_all <- data2 %>%
 
 
 # Member 6 (pair 3) write code to join your data to 'plastic_data_all':
-
+# 
+plastic_data_all <- data3 %>%
+  select(-name) %>%
+  right_join(plastic_data_all, by = "code")
 
 # Member 1 (pair 1) write code to join your data to 'plastic_data_all':
 
