--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -56,8 +56,11 @@ plastic_data_all <- data3 %>%
   right_join(plastic_data_all, by = "code")
 
 # Member 1 (pair 1) write code to join your data to 'plastic_data_all':
+data4 <- read_excel("data/UN_country_region.xlsx")
 
-
+plastic_data_all <- data4 %>%
+  select(-name) %>%
+  right_join(plastic_data_all, by = "code")
 
 ```
 
