--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -81,7 +81,9 @@ plastic_data_all %>% head(n = 10)
 ```{r Ex1, message = FALSE}
 # Write your code here to answer exercise 1
 
-
+plastic_data_all %>% 
+  group_by(region) %>%
+  tally()
 
 ```
 
