--- a/lab-02.Rmd
+++ b/lab-02.Rmd
@@ -7,6 +7,8 @@ output: html_document
 
 ### Load packages and data
 
+Test
+
 ```{r load-packages, message = FALSE, warning=FALSE}
 library(tidyverse)
 library(readxl)
